--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["es2015-node4"]
+  "presets": ["es2015-node4"],
+   "plugins": [
+          "syntax-flow",
+          "transform-flow-strip-types",
+          "transform-strict-mode",
+          "transform-class-properties",
+          "transform-strict-mode"
+      ]
 }
