--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
-  "presets": ["es2015-node4"],
-   "plugins": [
-          "syntax-flow",
-          "transform-flow-strip-types",
-          "transform-strict-mode",
-          "transform-class-properties",
-          "transform-strict-mode"
-      ]
+  "presets": [
+    "es2015"
+  ],
+  "plugins": [
+    "syntax-flow",
+    "transform-flow-strip-types",
+    "transform-strict-mode",
+    "transform-class-properties",
+    "transform-strict-mode"
+  ]
 }
