--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gConfig",
+  "name": "gconfig",
   "description": "Configuration helper for Gulp",
   "version": "0.1.0",
   "main": "dist/main.min.js",
@@ -13,21 +13,23 @@
     "test": "babel-node ./node_modules/.bin/isparta cover _mocha"
   },
   "devDependencies": {
-    "babel-cli": "^6.1.18",
-    "babel-plugin-transform-class-properties": "^6.3.2",
-    "babel-plugin-transform-flow-strip-types": "^6.1.18",
+    "babel-cli": "^6.3.17",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-flow-strip-types": "^6.3.15",
     "babel-plugin-transform-strict-mode": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-node4": "*",
-    "esdoc-es7-plugin": "0.0.3",
-    "eslint": "^1.9.0",
-    "eslint-config-airbnb": "^1.0.0",
     "chai": "*",
     "coveralls": "*",
+    "del": "^2.2.0",
+    "esdoc-es7-plugin": "0.0.3",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.1",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
+    "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-esdoc": "^0.1.0",
-    "gulp-eslint": "^1.1.0",
+    "gulp-esdoc": "^0.2.0",
+    "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.6.0",
@@ -37,7 +39,7 @@
     "sinon": "*"
   },
   "dependencies": {
-    "del": "^2.1.0",
+    "del": "^2.2.0",
     "path": "^0.12.7"
   }
 }
