--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "isparta": "*",
