--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gconfig",
   "description": "Configuration helper for Gulp",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "main": "dist/main.js",
   "author": "red2678",
   "repository": "red2678/gConfig",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-flow-comments": "^6.3.23",
     "babel-plugin-transform-flow-strip-types": "^6.3.15",
     "babel-plugin-transform-strict-mode": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
