--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gconfig",
   "description": "Configuration helper for Gulp",
-  "version": "0.1.18",
-  "main": "dist/main.js",
+  "version": "0.1.19",
+  "main": "./dist/main.js",
   "author": "red2678",
   "repository": "red2678/gConfig",
   "license": "MIT",
@@ -10,22 +10,33 @@
     "compile": "babel src --out-dir lib",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublish": "npm run compile",
-    "test": "babel-node ./node_modules/.bin/isparta cover _mocha"
+    "test": "babel-node ./node_modules/.bin/isparta cover _mocha",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "initapp": "npm install",
+    "postinitapp": "npm prune && bower prune",
+    "update": "ncu -a -u",
+    "postupdate": "npm run initapp",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "gulp protractor",
+    "predeploy": "npm update",
+    "deploy": "test",
+    "postdeploy": "release it"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-plugin-transform-class-properties": "^6.5.2",
-    "babel-plugin-transform-flow-comments": "^6.5.0",
-    "babel-plugin-transform-flow-strip-types": "^6.5.0",
-    "babel-plugin-transform-strict-mode": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-cli": "^6.6.5",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-flow-comments": "^6.7.0",
+    "babel-plugin-transform-flow-strip-types": "^6.7.0",
+    "babel-plugin-transform-strict-mode": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node4": "*",
     "chai": "*",
     "coveralls": "*",
     "del": "^2.2.0",
     "esdoc-es7-plugin": "0.0.3",
-    "eslint": "^2.2.0",
-    "eslint-config-airbnb": "^6.0.2",
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-esdoc": "^0.2.0",
