--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,14 @@
     "es2015"
   ],
   "plugins": [
+    ["typecheck", {
+      "disable": {
+        "production": true
+      }
+    }],
     "syntax-flow",
     "transform-flow-strip-types",
     "transform-strict-mode",
-    "transform-class-properties",
-    "transform-strict-mode"
+    "transform-class-properties"
   ]
 }
