--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gconfig",
   "description": "Configuration helper for Gulp",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "main": "./dist/main.js",
   "author": "red2678",
-  "repository": "red2678/gConfig",
+  "repository": "https://github.com/red2678/GConfig",
   "license": "MIT",
   "scripts": {
     "compile": "babel src --out-dir lib",
@@ -24,28 +24,28 @@
     "postdeploy": "release it"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
+    "babel-cli": "^6.7.5",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-flow-comments": "^6.7.0",
     "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-plugin-transform-strict-mode": "^6.6.5",
+    "babel-plugin-typecheck": "^3.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node4": "*",
     "chai": "*",
     "coveralls": "*",
     "del": "^2.2.0",
     "esdoc-es7-plugin": "0.0.3",
-    "eslint": "^2.3.0",
-    "eslint-config-airbnb": "^6.1.0",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-esdoc": "^0.2.0",
-    "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-yuidoc": "^0.1.2",
     "isparta": "*",
     "mocha": "*",
     "sinon": "*"
