--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "coveralls": "*",
     "del": "^2.2.0",
     "esdoc-es7-plugin": "0.0.3",
-    "eslint": "^2.7.0",
+    "eslint": "^2.8.0",
     "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-esdoc": "^0.2.0",
