--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
   "presets": [
-    "es2015"
+    "env",
+    "es2015",
+    "es2016",
+    "flow"
   ],
   "plugins": [
+    "transform-class-properties",
     ["typecheck", {
       "disable": {
         "production": true
@@ -10,7 +14,6 @@
     }],
     "syntax-flow",
     "transform-flow-strip-types",
-    "transform-strict-mode",
-    "transform-class-properties"
+    "transform-strict-mode"
   ]
 }
