--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "repository": "https://github.com/red2678/GConfig",
   "license": "MIT",
   "scripts": {
-    "compile": "babel src --out-dir lib",
+    "flow": "flow",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prepublish": "npm run compile",
     "test": "babel-node ./node_modules/.bin/isparta cover _mocha",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
@@ -24,35 +23,42 @@
     "postdeploy": "release it"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-eslint": "^6.0.2",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-flow-comments": "^6.7.0",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
-    "babel-plugin-transform-strict-mode": "^6.6.5",
-    "babel-plugin-typecheck": "^3.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-node4": "*",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-comments": "^6.22.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "chai": "*",
     "coveralls": "*",
-    "del": "^2.2.0",
     "esdoc-es7-plugin": "0.0.3",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.47.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-esdoc": "^0.2.0",
-    "gulp-if": "^2.0.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-jsdoc3": "^1.0.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-yuidoc": "^0.1.2",
+    "gulp-sourcemaps": "^2.6.0",
     "isparta": "*",
+    "jsdoc-babel": "^0.3.0",
     "mocha": "*",
+    "run-sequence": "^1.2.2",
     "sinon": "*"
   },
   "dependencies": {
-    "del": "^2.2.0",
+    "del": "^2.2.2",
     "path": "^0.12.7"
-  }
+  },
+  "false": {}
 }
