--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gconfig",
   "description": "Configuration helper for Gulp",
-  "version": "0.1.21",
+  "version": "0.2.0",
   "main": "./dist/main.js",
   "author": "red2678",
   "repository": "https://github.com/red2678/GConfig",
@@ -39,6 +39,7 @@
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
