--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 sudo: false
 node_js:
-  - stable
   - 6
 install: true
+before_script:
+  - npm install -g gulp-cli themekit  @shopify/slate @shopify/themekit
 script: gulp
 
