--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 sudo: false
 node_js:
   - 6
-install: true
 before_script:
   - npm install -g gulp-cli @shopify/slate @shopify/themekit
+  - npm install
 script: gulp
 
