--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 sudo: false
 node_js:
   - 6
-install: true
 before_script:
   - npm install -g gulp-cli
+  - npm install
 script: gulp
 cache:
   directories:
